# OPENTHREAD_SERVER

./: CMakeLists.txt  README.md  prj.conf
src/: main.c
src/openthread_events/: openthread_events.c  openthread_events.h
src/utils/: utils.h
